with some CSS stylin

--- a/bio.html
+++ b/bio.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Robert Hoang Bio</title>
+<style>
+    h1 {
+            font-size: 60px;
+            background-color: blue;
+            color: white;
+        }
+        
+    p {
+            font-size: 20px;
+            background-color: red;
+            color: black;
+        }
+
+    h2 {
+            font-size: 45px;
+            background-color: blueviolet;
+            color: yellow;
+    }
+
+    body {
+            background-color:aqua;
+    }
+        </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -19,6 +42,6 @@
     <h2>Contact Info</h2>
 
     <ul>
-        <li><strong>Email:</strong> <a href="rhoang57@gmail.com">rhoang57@gmail.com</a> </li>
+        <li><strong>Email:</strong> <a href="#">rhoang57@gmail.com</a> </li>
         <li><strong>Github:</strong> <a href="https://github.com/rhoang57">rhoang57</a></li>
         <li><strong>Portfolio:</strong> <a href="http://www.heartcavity.com">My Portfolio</a></li>
